# pengeluaran

./: .dockerignore  .env.example  DOCKER.md  Dockerfile  README.md  agent.py  config.py  database.py  docker-compose.yaml  docker-compose.yml  gemini.py  main.py  memory.py  models.py  pyproject.toml  requirements.txt  telegram.py  test_token.py  tools.py
prompts/: system.md
tests/: test_agent.py  test_gemini.py  test_main.py  test_memory.py  test_tools.py
