[project]
name = "belajar-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncpg>=0.29.0",
    "fastapi>=0.115.0",
    "google-genai>=1.0.0",
    "gspread>=6.0.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
    "sqlmodel>=0.0.22",
    "uvicorn>=0.32.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]
