[project]
name = "ai-pengeluaran"
version = "0.1.0"
description = "Bot Telegram sederhana dengan OpenAI (ChatGPT)"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.32.0",
    "gspread>=6.0.0",
    "openai>=2.44.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
